Add bootstrap, jquery, simple sidebar nav. Start using panel and modal body as cards

--- a/templates/equipment/subTemplates/equipInfo.html
+++ b/templates/equipment/subTemplates/equipInfo.html
@@ -2,11 +2,11 @@
     <table class="table table-hover">
         <caption style="text-align:center">Equipment Information</caption>
         <tr>
-            <td>Equipment Type</td>
-            <td>Name</td>
-            <td>Manufacturer Name</td>
-            <td>Serial Number</td>
-            <td>Date of Manufacture</td>
+            <th>Equipment Type</th>
+            <th>Name</th>
+            <th>Manufacturer Name</th>
+            <th>Serial Number</th>
+            <th>Date of Manufacture</th>
         </tr>
             <tr>
                 <td>
