--- a/templates/inspection/subTemplates/subVisualInspection.html
+++ b/templates/inspection/subTemplates/subVisualInspection.html
@@ -1,35 +1,46 @@
-{% if visualInspection %}
-    <table class="table table-hover">
-        <caption style="text-align:center">Visual Inspection Log</caption>
-        <tr>
-            <td>Date Created</td>
-            <td>Machine Operator</td>
-            <td>Inspector Name</td>
-            <td>Cavity ID</td>
-            <td>Inspection Result</td>
-            <td>Defect Codes</td>
-        </tr>
-        {% for ep in visualInspection %}
-            <tr>
-                <td>
-                    {{ ep.dateCreated }}
-                </td>
-                <td>
-                    {{ ep.machineOperator }}
-                </td>
-                <td>
-                    {{ ep.inspectorName }}
-                </td>
-                <td>
-                    {{ ep.headCavID }}
-                </td>
-                <td>
-                    {{ ep.inspectionResult }}
-                </td>
-                <td>
-                    {% for dt in ep.defectType.all %} {{ dt.defectType }}. {% endfor %}
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-{% endif %}
+<div class="panel panel-default">
+    <div class="modal-body">
+        {% if visualInspection %}
+            <table class="table table-hover">
+                <caption style="text-align:center">Visual Inspection Log</caption>
+                <thead>
+                <tr>
+                    <th>Date Created</th>
+                    <th>Machine Operator</th>
+                    <th>Inspector Name</th>
+                    <th>Cavity ID</th>
+                    <th>Inspection Result</th>
+                    <th>Defect Codes</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for ep in visualInspection %}
+
+                    <tr>
+                        <td>
+                            {{ ep.dateCreated }}
+                        </td>
+                        <td>
+                            {{ ep.machineOperator }}
+                        </td>
+                        <td>
+                            {{ ep.inspectorName }}
+                        </td>
+                        <td>
+                            {{ ep.headCavID }}
+                        </td>
+                        <td>
+                            {{ ep.inspectionResult }}
+                        </td>
+                        <td>
+                            {% for dt in ep.defectType.all %} {{ dt.defectType }}. {% endfor %}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
+    </div>
+</div>
+
+
