--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -13,22 +13,29 @@
 
 {% include "inspection/subTemplates/subJobInfo.html" %}
 
-{%  for ep in active_job %}
-    <ul>
-        <li><a href="/inspection/jobReport/{{ ep.jobNumber }}">Click here to view current job report</a></li>
-        {% if inspectionTypes.visual_inspection %}
-        <li><a href="/inspection/{{ ep.jobNumber }}/visual">Click here to record visual inspection</a></li>
-        {% endif %}
-        {% if inspectionTypes.part_weight_inspection %}
-            <li><a href="/inspection/{{ ep.jobNumber }}/part_weight">Click here to record part weight inspection</a>
-            </li>
-        {% endif %}
-        {% if inspectionTypes.shot_weight_inspection %}
-            <li><a href="/inspection/{{ ep.jobNumber }}/shot_weight">Click here to record shot weight inspection</a>
-            </li>
-        {% endif %}
-    </ul>
-{% endfor %}
+<div class="panel panel-default">
+    <div class="modal-body">
+
+        {%  for ep in active_job %}
+            <ul>
+                <li><a href="/inspection/jobReport/{{ ep.jobNumber }}">Click here to view current job report</a></li>
+                {% if inspectionTypes.visual_inspection %}
+                    <li><a href="/inspection/{{ ep.jobNumber }}/visual">Click here to record visual inspection</a></li>
+                {% endif %}
+                {% if inspectionTypes.part_weight_inspection %}
+                    <li><a href="/inspection/{{ ep.jobNumber }}/part_weight">Click here to record part weight inspection</a>
+                    </li>
+                {% endif %}
+                {% if inspectionTypes.shot_weight_inspection %}
+                    <li><a href="/inspection/{{ ep.jobNumber }}/shot_weight">Click here to record shot weight inspection</a>
+                    </li>
+                {% endif %}
+            </ul>
+        {% endfor %}
+
+    </div>
+</div>
+
 
 
 
