--- a/templates/inspection/partWeight.html
+++ b/templates/inspection/partWeight.html
@@ -15,6 +15,10 @@
 
 {% include "inspection/subTemplates/subJobInfo.html" %}
 
+
+<div class="panel panel-default">
+    <div class="modal-body">
+
 <form method="post" class="form">
    {% csrf_token %}
     {% bootstrap_form form layout='horizontal' %}
@@ -24,6 +28,9 @@
         </button>
     {% endbuttons %}
 </form>
+    </div>
+</div>
+
 
 
 </body>
