--- a/templates/inspection/subTemplates/subPartweight.html
+++ b/templates/inspection/subTemplates/subPartweight.html
@@ -1,31 +1,42 @@
-{% if partWeightInspection %}
-    <table class="table table-hover">
-        <caption style="text-align:center">Part Weight Log</caption>
-        <tr>
-            <td>Date Created</td>
-            <td>Machine Operator</td>
-            <td>Inspector Name</td>
-            <td>Cavity ID</td>
-            <td>Part Weight</td>
-        </tr>
-        {% for ep in partWeightInspection %}
-            <tr>
-                <td>
-                    {{ ep.dateCreated }}
-                </td>
-                <td>
-                    {{ ep.machineOperator }}
-                </td>
-                <td>
-                    {{ ep.inspectorName }}
-                </td>
-                <td>
-                    {{ ep.headCavID }}
-                </td>
-                <td>
-                    {{ ep.partWeight }}
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-{% endif %}
+
+
+<div class="panel panel-default">
+    <div class="modal-body">
+        {% if partWeightInspection %}
+            <table class="table table-hover">
+                <caption style="text-align:center">Part Weight Log</caption>
+                <thead>
+                <tr>
+                    <th>Date Created</th>
+                    <th>Machine Operator</th>
+                    <th>Inspector Name</th>
+                    <th>Cavity ID</th>
+                    <th>Part Weight</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for ep in partWeightInspection %}
+                    <tr>
+                        <td>
+                            {{ ep.dateCreated }}
+                        </td>
+                        <td>
+                            {{ ep.machineOperator }}
+                        </td>
+                        <td>
+                            {{ ep.inspectorName }}
+                        </td>
+                        <td>
+                            {{ ep.headCavID }}
+                        </td>
+                        <td>
+                            {{ ep.partWeight }}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+
+            </table>
+        {% endif %}
+    </div>
+</div>
