--- a/templates/startupshot/startUpShotSearch.html
+++ b/templates/startupshot/startUpShotSearch.html
@@ -3,18 +3,22 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+
 </head>
 <body>
 
-
+{% load staticfiles %}
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery=1 %}
 
 {% include "nav/nav.html" %}
-<p>Type in a part number to see what has already been created.</p>
 
-<form action="/startupshot/" method="post" class="form">
+
+<div class="panel panel-default">
+    <div class="modal-body">
+    <span class="help-block"> Type in a part number to see what has already been created</span>
+    <form action="/startupshot/" method="post" class="form">
     {% csrf_token %}
     {% bootstrap_form form layout='horizontal' %}
     {% buttons %}
@@ -22,7 +26,9 @@
             {% bootstrap_icon "star" %} Submit
         </button>
     {% endbuttons %}
-</form>
+    </form>
+    </div>
+</div>
 
 
 </body>
