--- a/templates/startupshot/view.html
+++ b/templates/startupshot/view.html
@@ -7,27 +7,32 @@
 <body>
 
 {% load mathfilters %}
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
+{#{% load bootstrap3 %}#}
+{#{% bootstrap_css %}#}
+{#{% bootstrap_javascript jquery=1 %}#}
 {% include "nav/nav.html" %}
 
 
+<div class="panel panel-default">
+    <div class="modal-body">
 
 {% if different_shot_list %}
     <div>
-        <table class="table table-bordered">
+        <table class="table table-hover">
             {% if item %}
                 <caption style="text-align:center">Start Up Shot Log for Part: {{item.item_Number}} - {{item.item_Description}}</caption>
             {%  endif %}
+            <thead>
             <tr>
-                <td>Job Number</td>
-                <td>Date Created</td>
-                <td>Inspector Name</td>
-                <td>Shot Weight</td>
-                <td>Active Cavities</td>
-                <td>Average Part Weight</td>
+                            <th>Job Number</th>
+                <th>Date Created</th>
+                <th>Inspector Name</th>
+                <th>Shot Weight</th>
+                <th>Active Cavities</th>
+                <th>Average Part Weight</th>
             </tr>
+        </thead>
+        <tbody>
             {% for eachJob in different_shot_list %}
                 <tr>
                     <td>{{ eachJob.jobNumber }}</td>
@@ -38,10 +43,14 @@
                     <td>{{ eachJob.shotWeight|div:eachJob.activeCavities }}</td>
                 </tr>
             {% endfor %}
+        </tbody>
     </div>
 {% else %}
     <p>No jobs recorded.</p>
 {% endif %}
+
+    </div>
+</div>
 
 </body>
 </html>
