--- a/templates/startupshot/createStartupShot.html
+++ b/templates/startupshot/createStartupShot.html
@@ -11,25 +11,27 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
+<div class="col-sm-10 bootcards-cards">
+    {% include "startupshot/subMattecSummary.html" %}
 
-{% include "startupshot/subMattecSummary.html" %}
 
-<div class="panel panel-default">
-    <div class="modal-body">
-<form method="post" class="form">
-    {% csrf_token %}
-    {% bootstrap_form form layout='horizontal' %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">
-            {% bootstrap_icon "star" %} Submit
-        </button>
-    {% endbuttons %}
-</form>
-
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <form method="post" class="form">
+                    {% csrf_token %}
+                    {% bootstrap_form form layout='horizontal' %}
+                    {% buttons %}
+                        <button type="submit" class="btn btn-primary">
+                            {% bootstrap_icon "star" %} Submit
+                        </button>
+                    {% endbuttons %}
+                </form>
+            </div>
+        </div>
     </div>
+
+
 </div>
-
-
-
 </body>
 </html>
