--- a/templates/startupshot/subMattecSummary.html
+++ b/templates/startupshot/subMattecSummary.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-    <div class="modal-body">
+    {#    <div class="modal-body">#}
 
         {% if MattecDict %}
             <table class="table table-hover">
@@ -45,5 +45,5 @@
             </table>
         {% endif %}
 
-    </div>
+    {#    </div>#}
 </div>
