--- a/templates/startupshot/viewActive.html
+++ b/templates/startupshot/viewActive.html
@@ -7,17 +7,16 @@
 <body>
 
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
+{#{% load bootstrap3 %}#}
+{#{% bootstrap_css %}#}
+{#{% bootstrap_javascript jquery=1 %}#}
 
 {% include "nav/nav.html" %}
 
 
-
-
-<div class="panel panel-default">
-    <div class="modal-body">
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
     <p>Welcome to the CIMC Startup Shot Page! The following machines are active:</p>
         {% if activeInMattec %}
             <ul>
@@ -28,6 +27,6 @@
             </ul>
         {% endif %}
     </div>
+    </div>
 </div>
-
 
